# swarm-orchestrator

./: .gitignore  LICENSE  PLAN.md  PLAN_V2_SCHALTWERK.md  README.md  pyproject.toml  schaltwerk_parallelization_guide.md
.swarm/: config.json  sessions.json
.swarm/worktrees/add-opencode-backend-d2f8eab7-agent-0/tests/: test_opencode_backend.py
docs/: CURSOR_INTEGRATION_PLAN.md  INTEGRATIONS.md  SWARM_AGENT_INSTRUCTIONS.md  llmlingua-integration.md  tui-best-practices.md
docs/swarm-agents/: wave-1a-project-bootstrap.md  wave-1b-ollama-client.md  wave-1c-data-models.md  wave-1d-voting-logic.md  wave-2a-task-decomposer.md  wave-2b-agent-execution.md  wave-2c-consensus-node.md  wave-3a-langgraph-workflow.md  wave-4a-cli-integration.md
src/swarm_orchestrator/: __init__.py  cli.py  config.py  decomposer.py  exploration.py  installation.py  mcp_client.py  orchestrator.py  schaltwerk.py  tui.py  voting.py
src/swarm_orchestrator/backends/: __init__.py  base.py  cursor.py  cursor_auth.py  git_native.py  git_native_store.py  llm.py  schaltwerk.py
src/swarm_orchestrator/swarm_mcp/: __init__.py  compression.py  diff_utils.py  server.py  state.py  tools.py
tests/: __init__.py  conftest.py  test_backends_base.py  test_backends_llm.py  test_backends_schaltwerk.py  test_cli.py  test_cli_sessions.py  test_compression.py  test_config.py  test_cursor_auth.py  test_cursor_backend.py  test_decomposer.py  test_exploration.py  test_git_native_agent_backend.py  test_git_native_backend.py  test_git_native_store.py  test_installation.py  test_mcp_client.py  test_orchestrator.py  test_schaltwerk.py  test_swarm_mcp.py  test_tui.py  test_voting.py
