[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-orchestrator"
version = "0.1.0"
description = "Multi-agent consensus system using Schaltwerk + Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
swarm = "swarm_orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
