[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-orchestrator"
version = "0.2.0"
description = "Multi-agent consensus system using Schaltwerk + Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Swarm Orchestrator Contributors"},
]
maintainers = [
    {name = "Swarm Orchestrator Contributors"},
]
keywords = [
    "ai",
    "agents",
    "multi-agent",
    "consensus",
    "claude",
    "schaltwerk",
    "orchestrator",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/rayen-faleh/swarm-orchestrator"
Documentation = "https://github.com/rayen-faleh/swarm-orchestrator#readme"
Repository = "https://github.com/rayen-faleh/swarm-orchestrator"
Issues = "https://github.com/rayen-faleh/swarm-orchestrator/issues"
Changelog = "https://github.com/rayen-faleh/swarm-orchestrator/blob/main/CHANGELOG.md"

[project.scripts]
swarm = "swarm_orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
